force-app/main/default/objects/Provisioning__c/Provisioning__c.object-meta.xml
<CustomObject>
    <label>Provisioning</label>
    <nameField>
        <label>Provisioning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provisionings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>