force-app/main/default/objects/Provisioning__c/fields/CF_Busy_Fixed__c.field-meta.xml
<CustomField>
    <fullName>CF_Busy_Fixed__c</fullName>
    <label>CF Busy Fixed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>