force-app/main/default/objects/Provisioning__c/fields/CF_No_Ans_Fixed__c.field-meta.xml
<CustomField>
    <fullName>CF_No_Ans_Fixed__c</fullName>
    <label>CF No Answer Fixed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>