force-app/main/default/objects/Provisioning__c/fields/CF_Rmt_Acc_PIN__c.field-meta.xml
<CustomField>
    <fullName>CF_Rmt_Acc_PIN__c</fullName>
    <label>CF Remote Access PIN</label>
    <length>5</length>
    <type>Text</type>
</CustomField>