force-app/main/default/objects/Provisioning__c/fields/Cut_Thru_Attendant__c.field-meta.xml
<CustomField>
    <fullName>Cut_Thru_Attendant__c</fullName>
    <label>Cut-Thru Attendant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>