force-app/main/default/objects/Provisioning__c/fields/Cut_Thru_To_Pager__c.field-meta.xml
<CustomField>
    <fullName>Cut_Thru_To_Pager__c</fullName>
    <label>Cut-Thru To Pager</label>
    <length>10</length>
    <type>Text</type>
</CustomField>