force-app/main/default/objects/Provisioning__c/fields/Distinctive_Ring_Main__c.field-meta.xml
<CustomField>
    <fullName>Distinctive_Ring_Main__c</fullName>
    <label>Distinctive Ring Main #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>