force-app/main/default/objects/Provisioning__c/fields/DRING_Line_2__c.field-meta.xml
<CustomField>
    <fullName>DRING_Line_2__c</fullName>
    <label>DRING Line 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>