force-app/main/default/objects/Provisioning__c/fields/DRING_Line_2_Patrn__c.field-meta.xml
<CustomField>
    <fullName>DRING_Line_2_Patrn__c</fullName>
    <label>DRING Line 2 Patrn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>