force-app/main/default/objects/Provisioning__c/fields/DRING_Line_3_CF_Choice__c.field-meta.xml
<CustomField>
    <fullName>DRING_Line_3_CF_Choice__c</fullName>
    <label>DRING Line 3 CF Choice</label>
    <length>1</length>
    <type>Text</type>
</CustomField>