force-app/main/default/objects/Provisioning__c/fields/Hunt_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Group_Number__c</fullName>
    <label>Hunt Group Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>