force-app/main/default/objects/Provisioning__c/fields/Hunt_Member__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Member__c</fullName>
    <label>Hunt Member</label>
    <length>10</length>
    <type>Text</type>
</CustomField>