force-app/main/default/objects/Provisioning__c/fields/Hunt_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Pilot__c</fullName>
    <label>Hunt Pilot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>