force-app/main/default/objects/Provisioning__c/fields/Hunt_Seq_Or_Circle__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Seq_Or_Circle__c</fullName>
    <label>Hunt Sequence Or Circle</label>
    <length>1</length>
    <type>Text</type>
</CustomField>