force-app/main/default/objects/Provisioning__c/fields/Hunt_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Sequence__c</fullName>
    <label>Hunt Member Sequence</label>
    <length>4</length>
    <type>Text</type>
</CustomField>