force-app/main/default/objects/Provisioning__c/fields/Intercept_Rml_Date__c.field-meta.xml
<CustomField>
    <fullName>Intercept_Rml_Date__c</fullName>
    <label>Intercept Removal Date</label>
    <type>Date</type>
</CustomField>