force-app/main/default/objects/Provisioning__c/fields/Last_SO_Postdate__c.field-meta.xml
<CustomField>
    <fullName>Last_SO_Postdate__c</fullName>
    <label>Last SO Postdate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>