force-app/main/default/objects/Provisioning__c/fields/Last_SO_To_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_SO_To_Update__c</fullName>
    <label>Last SO To Update</label>
    <length>9</length>
    <type>Text</type>
</CustomField>