force-app/main/default/objects/Provisioning__c/fields/Msg_Routing_Boxes__c.field-meta.xml
<CustomField>
    <fullName>Msg_Routing_Boxes__c</fullName>
    <label>Msg Routing Boxes</label>
    <length>1</length>
    <type>Text</type>
</CustomField>