force-app/main/default/objects/Provisioning__c/fields/Of_Paths__c.field-meta.xml
<CustomField>
    <fullName>Of_Paths__c</fullName>
    <label># Of Paths</label>
    <length>2</length>
    <type>Text</type>
</CustomField>