force-app/main/default/objects/Provisioning__c/fields/Opt_Intercept_No__c.field-meta.xml
<CustomField>
    <fullName>Opt_Intercept_No__c</fullName>
    <label>Operater Intercept Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>