force-app/main/default/objects/Provisioning__c/fields/Pager__c.field-meta.xml
<CustomField>
    <fullName>Pager__c</fullName>
    <label>Pager #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>