force-app/main/default/objects/Provisioning__c/fields/Pager_Company__c.field-meta.xml
<CustomField>
    <fullName>Pager_Company__c</fullName>
    <label>Pager Company</label>
    <length>20</length>
    <type>Text</type>
</CustomField>