force-app/main/default/objects/Provisioning__c/fields/Pager_PIN__c.field-meta.xml
<CustomField>
    <fullName>Pager_PIN__c</fullName>
    <label>Pager PIN #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>