force-app/main/default/objects/Provisioning__c/fields/Primary_Fax__c.field-meta.xml
<CustomField>
    <fullName>Primary_Fax__c</fullName>
    <label>Primary Fax #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>