force-app/main/default/objects/Provisioning__c/fields/Rmt_Call_Fwd_To__c.field-meta.xml
<CustomField>
    <fullName>Rmt_Call_Fwd_To__c</fullName>
    <label>Remote Call Forward To</label>
    <length>14</length>
    <type>Text</type>
</CustomField>