force-app/main/default/objects/Provisioning__c/fields/Type_Of_Hunting__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Hunting__c</fullName>
    <label>Type Of Hunting</label>
    <length>25</length>
    <type>Text</type>
</CustomField>