force-app/main/default/objects/Provisioning__c/fields/VM_CF_No_Of_Rings__c.field-meta.xml
<CustomField>
    <fullName>VM_CF_No_Of_Rings__c</fullName>
    <label>VM/CF Number Of Rings</label>
    <length>2</length>
    <type>Text</type>
</CustomField>