force-app/main/default/objects/Provisioning__c/fields/VM_Fmly_Sub_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>VM_Fmly_Sub_Mailbox__c</fullName>
    <label>VM Family Sub Mailbox</label>
    <length>1</length>
    <type>Text</type>
</CustomField>