force-app/main/default/objects/Provisioning__c/fields/VM_Remark__c.field-meta.xml
<CustomField>
    <fullName>VM_Remark__c</fullName>
    <label>VM Remark</label>
    <length>132</length>
    <type>Text</type>
</CustomField>