force-app/main/default/objects/Provisioning__c/fields/Weekday_Wake_up__c.field-meta.xml
<CustomField>
    <fullName>Weekday_Wake_up__c</fullName>
    <label>Weekday Wake-up #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>