force-app/main/default/objects/Provisioning__c/fields/Weekend_Wake_up__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Wake_up__c</fullName>
    <label>Weekend Wake-up #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>